CSS/ListeChampion.css
body{
    background-color: #000000;
}

::-webkit-scrollbar
{
	width: 6px;
	background-color: #F5F5F5;
}

header{
    display: flex;
    width: 45%;
    background-color: #ffffff;
    padding: 5px;
    margin: 10px;
    color: black;
}

header img {
    width: 50px;
    height: 50px;
}
nav{
    display: flex;
    gap: 50px;
    align-items: center;
    margin-left: 20px;
}

nav ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    padding-left: 0;
    gap: 2px;
}

nav li{
    padding: 5px;
    text-align: center;
}

nav li a{
    text-decoration: none;
    color: black;
}

.recherche{
    width: 45%;
    background-color: #ffffff;
    margin: 10px;
    padding: 5px;
    display: flex;
    flex-direction: column;
    align-content: center;
    text-align: center;
    height: 200%;
}


.recherche input{
    width: 32.5%;
    align-self: center;
    background-color: #000000;
    color: white;
    border: none;
}

::placeholder{
    color: white;
}

select{
    background-color: #000000;
    color: white;
    width: 33%;
    margin-top: 5px;
    align-self: center;
    border: none;
}

.recherche button{
    width: 33%;
    align-self: center;
    background-color: rgb(0, 0, 0);
    text-decoration: none;
    color: white;
    border: none;
    padding: 3px;
    margin: 5px;
}

.resultats{
    background-color: #fcfcfc;
    width: 45%;
    margin: 10px;
    padding: 5px;
}

.resultats ul{
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    padding-left: 0;
}

#jokes{
    margin-left: 2%;
    margin-bottom: 10%;
    gap: 90px;
}

#jokes li{
    width: 25%;
    margin-bottom: -8%;
}

#jokes li a {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    text-align: center;
    color: #000000;
}

#plus{
    background-color: #000000;
    color: white;
    border: none;
}

#detail{
    position: fixed;
    right: 10px;
    top: 1px;
    width: 54.25%;
    overflow-y:scroll;
    height: 100%;
    margin-right: -1%;
}

#splash img{
    width: 100%;
}

.container{
    background-color: white;
    width: 90%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
}

#desc{
    text-align: center;
    width: 100%;
}

#graphContainer{
    width: 50%;
}

#competence{
    width: 50%;
}

#competence img{
    float: left;
    height: 100px;
    margin-right: 1%;
}

#competence p{
    height: 100px;
    overflow-y:scroll;
}

